[package]
name = "programing_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4"
image = "0.13.0"
actix-web = "1.0.8"
async-std = "1.12.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.105"
text-colorizer = "1"
regex = "1"



